# PokedexAPI

./: README.md
pokepi/: .env.example  Cargo.toml
pokepi/.sqlx/: query-00c802cf0bf8d4e4ef92b53083326def3fc147c121036a7104e8b40c07a3ca4d.json  query-01f4befb0d997d12b20fe7e75afcf4cb5c9cc29cac1edba9f20e34772853b317.json  query-02fa796c887487bfb6630660cf6233daf7dd0e2ab0f1106c4c8b239bc2568920.json  query-0ccb2f78c0cf43344eceb5d40e71d1331ddb8a6ecae1682fa6da4ea9f2c2409b.json  query-0d834fc7c1f153e1d7c49b08572290e4bf142599609a7b841585111f29a0787b.json  query-0ed9a310a14d02442137e7065e969a23ca391f0e490a8c188edc40eb3af8db26.json  query-0f3173a98aa5f818575b934713e907efd59ceab7ef3859df5bd4c93781d3872e.json  query-0f985f150eb0bda8172ea5fd8b671f00fb423812ac82a77bcaaeb78903cf14bc.json  query-15632bc0e5f9d2d9eb3f1e19f50107a4d5d0f5404d4f991ace3f9a932146e62f.json  query-15a030428fafca27c1957da294389af35389dcf9aa693d79a3c36897122d209c.json  query-1b1d34a502e0f6364dc96a6a4a79596f3a0607fd13f197449cac621ced2238ce.json  query-1b728db9d7f8dab115c4528c0ffca1c335e9531c2087502324245ec3a6efe8a0.json  query-1c851ff38cf4ec573f9f343aaafc791340ca752692d2ac9604ba5dea127a1450.json  query-212427ccceb43514b63b7b22097eb53101e4ab1337fa06a05f5df0e6353a6652.json  query-212f321bc0eb490f5fb509af9438b588d8a699d15e4309f4d162988f7c98db4f.json  query-21d59a9695a31cacbf3c8a40b686bf84352c799ac24555c18d5f55791a50c28a.json  query-250d6d11eb682ea34eb2705b8db6409adbf0d61103be41076e6053d29daff641.json  query-29b22c7086dd8f71af96e213342ba8931c2f17a48284cb0b7f0166c286fb0885.json  (+135 more)
pokepi/src/: error.rs  main.rs
(+150 files in other folders)
